--- a/related_works.tex
+++ b/related_works.tex
@@ -1,4 +1,4 @@
-\section{Related Works}
+\section{Related Work}
 \label{Sec:RelatedWorks}
 
 I/O contention in HPC systems draws a lot of attention in the community, 
